Support merging object-type fields when fetching the schema from the index (#3653)
* merge object/array

Signed-off-by: xinyual <xinyual@amazon.com>

* simplified code

Signed-off-by: xinyual <xinyual@amazon.com>

* apply spotless

Signed-off-by: xinyual <xinyual@amazon.com>

* fix IT by adding fields

Signed-off-by: xinyual <xinyual@amazon.com>

* revert to hashmap

Signed-off-by: xinyual <xinyual@amazon.com>

* filter one indices case

Signed-off-by: xinyual <xinyual@amazon.com>

* add ut and merge rules

Signed-off-by: xinyual <xinyual@amazon.com>

* add benchmark test

Signed-off-by: xinyual <xinyual@amazon.com>

* revert change

Signed-off-by: xinyual <xinyual@amazon.com>

* refactor merge rules

Signed-off-by: xinyual <xinyual@amazon.com>

* fix IT

Signed-off-by: xinyual <xinyual@amazon.com>

---------

Signed-off-by: xinyual <xinyual@amazon.com>